# double-entry-generator

./: .cnb.yml  .gitattributes  .gitignore  .goreleaser.yml  CODEOWNERS  Makefile  PR_TEMPLATE.md  README.en.md  README.md  check_encoding.go  example-alipay-records.csv  flake.nix  go.mod  go.sum  go.work  go.work.sum  main.go  test-output.bean
docs/: .nojekyll  Gemfile  Makefile  README.md  _config.yml  contributing.md  feed.xml  getting-started.md  index.html  index.md  mkdocs.yml  provider-migration-changelog.md  provider-migration-todo.md  providers.md  pyproject.toml
docs/_data/: navigation.yml  navigation_en.yml
docs/assets/css/: custom.css  style.css.map  style.scss
docs/configuration/: README.md  accounts.md  config.md  rules.md
docs/docs/: README.md  accounts.md  contributing.md  getting-started.md  index.md  providers.md
docs/docs/configuration/: README.md  accounts.md  rules.md
docs/docs/en/: contributing.md  getting-started.md  index.md  providers.md
docs/docs/examples/: README.md  advanced-rules.md  basic-usage.md
docs/docs/providers/: template.md
docs/en/: contributing.md  getting-started.md  index.md  providers.md
docs/en/configuration/: README.md  accounts.md  rules.md
docs/en/examples/: README.md  advanced-rules.md  basic-usage.md
docs/examples/: README.md  advanced-rules.md  basic-usage.md
docs/providers/: wechat.html
docs/providers/banks/: abc_debit.md  abcdebit.md  bmo.md  bocom-debit.md  bocom_credit.md  bocomcredit.md  ccb.md  citic.md  cmb.md  hsbchk.md  icbc.md  (+1 more)
docs/scripts/: patch_search_worker.py  serve_with_base.py
(+593 files in other folders)
